--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@ scene.add(wireframe);
       <div class="modal-body">
         <p><b class="modalTitle">Mesh Writer</b><br/><br/>
             Sometimes you need a quick way to code up an STL.  This is a <a href="https://threejs.org/" target="_blank">Three.js</a> + <a target="_blank" href="https://codemirror.net/">CodeMirror</a> tool to do live WebGL coding with STL export.<br/><br/>
+            Drag to rotate, scroll to zoom, right click and drag to pan.<br/>
             Click "Save STL" to save a binary STL.<br/>
             Ctrl/&#8984;+S to save a .js file with your code.<br/>
             Drag to resize editor.<br/><br/>
