--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script type="text/javascript" src="dependencies/flat-ui.min.js"></script>
     <script type="text/javascript" src="dependencies/three.js"></script>
     <script type="text/javascript" src="dependencies/binary_stl_writer.js"></script>
+    <script type="text/javascript" src="dependencies/OBJExporter.js"></script>
     <script type="text/javascript" src="dependencies/OrbitControls.js"></script>
     <script type="text/javascript" src="dependencies/underscore-min.js"></script>
     <script type="text/javascript" src="dependencies/codemirror.js"></script>
@@ -42,6 +43,7 @@
     </a>
     <button id="about" type="button" class="btn btn-default">About</button>
     <button id="saveSTL" type="button" class="btn btn-default">Save STL</button>
+    <button id="saveOBJ" type="button" class="btn btn-default">Save OBJ</button>
 </div>
 <div id="editor">
     <div id="draggable"></div>
