--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@ scene.add(wireframe);
             Sometimes you need a quick way to code up an STL.  This is a <a href="https://threejs.org/" target="_blank">Three.js</a> + <a target="_blank" href="https://codemirror.net/">CodeMirror</a> tool to do live WebGL coding with STL export.<br/><br/>
             Drag to rotate, scroll to zoom, right click and drag to pan.<br/>
             Click "Save STL" to save a binary STL.<br/>
+            Click "Save OBJ" to save an OBJ.<br/>
             Ctrl/&#8984;+S to save a .js file with your code.<br/>
             Drag to resize editor.<br/><br/>
             Built by <a href="http://www.amandaghassaei.com/" target="_blank">Amanda Ghassaei</a>, code on <a target="_blank" href="https://github.com/amandaghassaei/MeshWriter">Github</a>.
