--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ scene.add(wireframe);
     <div class="modal-content">
       <div class="modal-body">
         <p><b class="modalTitle">Mesh Writer</b><br/><br/>
-            Sometimes you need a quick way to code up an STL.  This is a <a href="https://threejs.org/" target="_blank">Three.js</a> + <a target="_blank" href="https://codemirror.net/">CodeMirror</a> tool to do live WebGL coding with STL export.<br/><br/>
+            Sometimes you need a quick way to code up a triangulated mesh.  This is a <a href="https://threejs.org/" target="_blank">Three.js</a> + <a target="_blank" href="https://codemirror.net/">CodeMirror</a> tool to do live WebGL coding with STL and OBJ export.<br/><br/>
             Drag to rotate, scroll to zoom, right click and drag to pan.<br/>
             Click "Save STL" to save a binary STL.<br/>
             Click "Save OBJ" to save an OBJ.<br/>
